--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+MYAPP_UPLOAD_STORE_FILE=stickey-app-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=sticker-app-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=StickerApp1910@123
+MYAPP_UPLOAD_KEY_PASSWORD=StickerAppAlias1910@123
